Day.(11 & 12) with Pandas

--- a/Pandas/pandas_handsON.ipynb
+++ b/Pandas/pandas_handsON.ipynb
@@ -4,39 +4,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PANDAS. (DAY-11)"
+    "## <span style=\"color:red\"> PANDAS </span>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style= \"color:yellow\"> ---------------------------------------------------------------------------------------------------------------------------------------------------------------- </span>"
+    "***"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<span style= \"color:yellow\"> ---------------------------------------------------------------------------------------------------------------------------------------------------------------- </span>"
+    "### <span style=\"color:orange\">(DAY-11)</span>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> ### import libraries !"
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 465,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import Libraries !\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt "
+    "import numpy as np"
    ]
   },
   {
@@ -3590,11 +3597,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---"
+   ]
   }
  ],
  "metadata": {
