Sequence of Folders

--- a/Python/NumPy/numpy_with_array.ipynb
+++ b/Python/NumPy/numpy_with_array.ipynb
@@ -244,8 +244,7 @@
     {
      "data": {
       "text/plain": [
-       "array([2.43902456e-154, 2.81187470e+275, 2.05132214e+161, 1.35717430e+131,\n",
-       "       8.01768645e-096])"
+       "array([0., 0., 0., 0., 0.])"
       ]
      },
      "execution_count": 12,
@@ -568,9 +567,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.00000000e+000, 0.00000000e+000, 0.00000000e+000],\n",
-       "       [4.94065646e-324, 0.00000000e+000, 1.30661355e-311],\n",
-       "       [1.30660501e-311, 0.00000000e+000, 0.00000000e+000]])"
+       "array([[nan,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.]])"
       ]
      },
      "execution_count": 25,
@@ -769,7 +768,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
