--- a/Statistics/data_wrangling.ipynb
+++ b/Statistics/data_wrangling.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 386,
    "id": "9dc3f875",
    "metadata": {},
    "outputs": [
@@ -80,24 +80,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>male</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7.2500</td>\n",
-       "      <td>S</td>\n",
-       "      <td>Third</td>\n",
-       "      <td>man</td>\n",
-       "      <td>True</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Southampton</td>\n",
-       "      <td>no</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -115,27 +97,105 @@
        "      <td>yes</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>female</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>53.1000</td>\n",
+       "      <td>S</td>\n",
+       "      <td>First</td>\n",
+       "      <td>woman</td>\n",
+       "      <td>False</td>\n",
+       "      <td>C</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>male</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>51.8625</td>\n",
+       "      <td>S</td>\n",
+       "      <td>First</td>\n",
+       "      <td>man</td>\n",
+       "      <td>True</td>\n",
+       "      <td>E</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>no</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>female</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>16.7000</td>\n",
+       "      <td>S</td>\n",
+       "      <td>Third</td>\n",
+       "      <td>child</td>\n",
+       "      <td>False</td>\n",
+       "      <td>G</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>female</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>26.5500</td>\n",
+       "      <td>S</td>\n",
+       "      <td>First</td>\n",
+       "      <td>woman</td>\n",
+       "      <td>False</td>\n",
+       "      <td>C</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   survived  pclass     sex   age  sibsp  parch     fare embarked  class  \\\n",
-       "0         0       3    male  22.0      1      0   7.2500        S  Third   \n",
-       "1         1       1  female  38.0      1      0  71.2833        C  First   \n",
+       "    survived  pclass     sex   age  sibsp  parch     fare embarked  class  \\\n",
+       "1          1       1  female  38.0      1      0  71.2833        C  First   \n",
+       "3          1       1  female  35.0      1      0  53.1000        S  First   \n",
+       "6          0       1    male  54.0      0      0  51.8625        S  First   \n",
+       "10         1       3  female   4.0      1      1  16.7000        S  Third   \n",
+       "11         1       1  female  58.0      0      0  26.5500        S  First   \n",
        "\n",
-       "     who  adult_male deck  embark_town alive  alone  \n",
-       "0    man        True  NaN  Southampton    no  False  \n",
-       "1  woman       False    C    Cherbourg   yes  False  "
+       "      who  adult_male deck  embark_town alive  alone  \n",
+       "1   woman       False    C    Cherbourg   yes  False  \n",
+       "3   woman       False    C  Southampton   yes  False  \n",
+       "6     man        True    E  Southampton    no   True  \n",
+       "10  child       False    G  Southampton   yes  False  \n",
+       "11  woman       False    C  Southampton   yes   True  "
       ]
      },
-     "execution_count": 324,
+     "execution_count": 386,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "boat.head(2)"
+    "boat.head()"
    ]
   },
   {
