--- a/Machine Learning/models/K-NN/k_nn.ipynb
+++ b/Machine Learning/models/K-NN/k_nn.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <span style=\"color:purple\">**Dataset: Salary_Prediction**</span>"
+    "### <span style=\"color:purple\">**Dataset: Chilla Dataset !**</span>"
    ]
   },
   {
@@ -23,22 +23,242 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>height</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>likeness</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>27</td>\n",
+       "      <td>170.688</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Biryani</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>41</td>\n",
+       "      <td>165.000</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Biryani</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>29</td>\n",
+       "      <td>171.000</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Biryani</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>27</td>\n",
+       "      <td>173.000</td>\n",
+       "      <td>102.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Biryani</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>29</td>\n",
+       "      <td>164.000</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Biryani</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   age   height  weight gender likeness\n",
+       "0   27  170.688    76.0   Male  Biryani\n",
+       "1   41  165.000    70.0   Male  Biryani\n",
+       "2   29  171.000    80.0   Male  Biryani\n",
+       "3   27  173.000   102.0   Male  Biryani\n",
+       "4   29  164.000    67.0   Male  Biryani"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# import Dataset !\n",
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv()\n",
+    "df = pd.read_csv('chillamldata.csv')\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['gender'] = df['gender'].replace('Male', 1)\n",
+    "df['gender'] = df['gender'].replace('Female', 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df.drop('likeness', axis=1)\n",
+    "y = df.likeness"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>height</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>gender</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>27</td>\n",
+       "      <td>170.688</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>41</td>\n",
+       "      <td>165.000</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   age   height  weight  gender\n",
+       "0   27  170.688    76.0       1\n",
+       "1   41  165.000    70.0       1"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    Biryani\n",
+       "1    Biryani\n",
+       "Name: likeness, dtype: object"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.head(2)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <span style=\"color:cyan\">Step: 02</span>: Data Already Cleaned or Organize"
+    "### <span style=\"color:cyan\">Step: 02</span>: Data Cleaned or Organize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "age         0\n",
+       "height      0\n",
+       "weight      0\n",
+       "gender      0\n",
+       "likeness    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
    ]
   },
   {
@@ -49,10 +269,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### <span style=\"color:cyan\">Step: 04</span>: Fit K-Nearest_Neighbor Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KNeighborsClassifier()"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "model = KNeighborsClassifier(n_neighbors=5).fit(X_train, y_train)\n",
+    "model\n"
    ]
   },
   {
@@ -63,10 +317,61 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "K-NN. (r2.score): 57.14285714285714\n"
+     ]
+    }
+   ],
+   "source": [
+    "predicted_values = model.predict(X_test)\n",
+    "predicted_values\n",
+    "\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "score = accuracy_score(y_test, predicted_values)*100\n",
+    "print(\"K-NN. (r2.score):\", score)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### <span style=\"color:cyan\">Step: 06</span>: Prediction of Un-known values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Biryani', 'Samosa', 'Biryani', 'Biryani', 'Samosa', 'Biryani',\n",
+       "       'Biryani', 'Biryani', 'Biryani', 'Biryani', 'Samosa', 'Biryani',\n",
+       "       'Biryani', 'Biryani', 'Biryani', 'Biryani', 'Samosa', 'Biryani',\n",
+       "       'Biryani', 'Biryani', 'Biryani', 'Samosa', 'Biryani', 'Biryani',\n",
+       "       'Biryani', 'Biryani', 'Biryani', 'Biryani', 'Biryani', 'Samosa',\n",
+       "       'Biryani', 'Biryani', 'Biryani', 'Pakora', 'Biryani', 'Biryani',\n",
+       "       'Samosa', 'Samosa', 'Biryani', 'Biryani', 'Biryani', 'Samosa',\n",
+       "       'Biryani', 'Biryani', 'Biryani', 'Biryani', 'Biryani', 'Biryani',\n",
+       "       'Biryani'], dtype=object)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict(X_test)"
    ]
   },
   {
