--- a/Machine Learning/My Projects/Fahad/1/cancer_prediction.ipynb
+++ b/Machine Learning/My Projects/Fahad/1/cancer_prediction.ipynb
@@ -934,6 +934,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### <span style=\"color:cyan\">Step: 05</span>: Fit Decision tree Technique !"
    ]
   },
@@ -956,8 +963,8 @@
    "source": [
     "from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
-    "model = DecisionTreeClassifier().fit(X_train, y_train)\n",
-    "model\n"
+    "dt_model = DecisionTreeClassifier().fit(X_train, y_train)\n",
+    "dt_model\n"
    ]
   },
   {
@@ -976,20 +983,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Decision tree: 87.72\n"
+      "Decision tree: 88.6\n"
      ]
     }
    ],
    "source": [
-    "predicted_values = model.predict(X_test)\n",
+    "predicted_values = dt_model.predict(X_test)\n",
     "predicted_values\n",
     "\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
     "import numpy as np\n",
     "\n",
-    "score = np.round(accuracy_score(y_test, predicted_values)*100, 2)\n",
-    "print(\"Decision tree:\", score)\n"
+    "dt_score = np.round(accuracy_score(y_test, predicted_values)*100, 2)\n",
+    "print(\"Decision tree:\",dt_score)\n"
    ]
   },
   {
@@ -1022,8 +1029,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\fahad\\AppData\\Local\\Temp\\ipykernel_15284\\334895486.py:3: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  model = RandomForestClassifier().fit(X_train, y_train)\n"
+      "C:\\Users\\fahad\\AppData\\Local\\Temp\\ipykernel_6732\\4111477682.py:3: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+      "  rf_model = RandomForestClassifier().fit(X_train, y_train)\n"
      ]
     },
     {
@@ -1040,8 +1047,8 @@
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
-    "model = RandomForestClassifier().fit(X_train, y_train)\n",
-    "model\n"
+    "rf_model = RandomForestClassifier().fit(X_train, y_train)\n",
+    "rf_model\n"
    ]
   },
   {
@@ -1065,94 +1072,15 @@
     }
    ],
    "source": [
-    "predicted_values = model.predict(X_test)\n",
+    "predicted_values = rf_model.predict(X_test)\n",
     "predicted_values\n",
     "\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
     "import numpy as np\n",
     "\n",
-    "score = np.round(accuracy_score(y_test, predicted_values)*100, 2)\n",
-    "print(\"Random Forest:\", score)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "***"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "***"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### <span style=\"color:cyan\">Step: 05</span>: Fit Logistic Regression !"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\fahad\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\sklearn\\utils\\validation.py:993: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "LogisticRegression()"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
-    "\n",
-    "model = LogisticRegression().fit(X_train, y_train)\n",
-    "model\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### <span style=\"color:cyan\">Step: 06</span>: Evaluate or Test Model Accuracy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Logistic Regression: 92.98\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "score = np.round(model.score(X_test, y_test)*100, 2)\n",
-    "print(\"Logistic Regression:\", score)\n"
+    "rf_score = np.round(accuracy_score(y_test, predicted_values)*100, 2)\n",
+    "print(\"Random Forest:\", rf_score)\n"
    ]
   },
   {
@@ -1178,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1195,7 +1123,7 @@
        "GaussianNB()"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1203,8 +1131,8 @@
    "source": [
     "from sklearn.naive_bayes import GaussianNB\n",
     "\n",
-    "model = GaussianNB().fit(X_train, y_train)\n",
-    "model\n"
+    "gnb_model = GaussianNB().fit(X_train, y_train)\n",
+    "gnb_model\n"
    ]
   },
   {
@@ -1216,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1228,15 +1156,180 @@
     }
    ],
    "source": [
-    "predicted_values = model.predict(X_test)\n",
+    "predicted_values = gnb_model.predict(X_test)\n",
     "predicted_values\n",
     "\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
     "import numpy as np\n",
     "\n",
-    "score = np.round(accuracy_score(y_test, predicted_values)*100, 2)\n",
-    "print(\"GaussianNB:\", score)\n"
+    "gnb_score = np.round(accuracy_score(y_test, predicted_values)*100, 2)\n",
+    "print(\"GaussianNB:\", gnb_score)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <span style=\"color:cyan\">Step: 05</span>: Fit Logistic Regression !"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\fahad\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\sklearn\\utils\\validation.py:993: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression()"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "lr_model = LogisticRegression().fit(X_train, y_train)\n",
+    "lr_model\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <span style=\"color:cyan\">Step: 06</span>: Evaluate or Test Model Accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistic Regression: 92.98\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "lr_score = np.round(lr_model.score(X_test, y_test)*100, 2)\n",
+    "print(\"Logistic Regression:\", lr_score)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data={'Decesion Tree'            :[dt_score],\n",
+    "      'Random Forest'            :[rf_score],\n",
+    "      'Gaussian Naive Bayes'     :[gnb_score],\n",
+    "      'Logistic Regression'      :[lr_score]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Decesion Tree</th>\n",
+       "      <th>Random Forest</th>\n",
+       "      <th>Gaussian Naive Bayes</th>\n",
+       "      <th>Logistic Regression</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Score</th>\n",
+       "      <td>88.6</td>\n",
+       "      <td>92.98</td>\n",
+       "      <td>92.11</td>\n",
+       "      <td>92.98</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Decesion Tree  Random Forest  Gaussian Naive Bayes  Logistic Regression\n",
+       "Score           88.6          92.98                 92.11                92.98"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Evaluation =pd.DataFrame(data, index=['Score'])\n",
+    "Evaluation"
    ]
   },
   {
