--- a/Python/Basic/Basic Data structures in Python.ipynb
+++ b/Python/Basic/Basic Data structures in Python.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "id": "7a768c0d",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
        "tuple"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "6d98ff39",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
        "(42, 'COMSATS')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "9bba1a0e",
    "metadata": {},
    "outputs": [
@@ -88,7 +88,7 @@
        "4"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,41 +99,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "d06cc446",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'set_tuple' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_19164/3967972488.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mset_tuple1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;36m55\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"LUMS\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m45.5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Tuple():\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mset_tuple\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mset_tuple\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'set_tuple' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tuple(): (42, 'COMSATS', 42.5, 1)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tuple"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "set_tuple1 = (55, \"LUMS\", 45.5, False, 0)\n",
+    "set_tuple1 = (55, \"LUMS\", 45.5, False)\n",
     "print(\"Tuple():\", set_tuple)\n",
     "type(set_tuple)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "ca1ab472",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(42, 'COMSATS', 42.5, 1, 55, 'LUMS', 45.5, False, 0)"
+       "(42, 'COMSATS', 42.5, 1, 55, 'LUMS', 45.5, False)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,17 +150,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "d1e40d42",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(42, 'COMSATS', 42.5, 1, 42, 'COMSATS', 42.5, 1, 55, 'LUMS', 45.5, False, 0)"
+       "(42, 'COMSATS', 42.5, 1, 42, 'COMSATS', 42.5, 1, 55, 'LUMS', 45.5, False)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "id": "c69c1e9d",
    "metadata": {},
    "outputs": [],
@@ -175,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "2d6d296a",
    "metadata": {},
    "outputs": [
@@ -185,7 +191,7 @@
        "10"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "id": "e83825fe",
    "metadata": {},
    "outputs": [
@@ -206,7 +212,7 @@
        "55"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "id": "a5c342ea",
    "metadata": {},
    "outputs": [
@@ -227,7 +233,7 @@
        "(42, 55, 47, 50, 12, 10, 18, 42, 55, 47, 50, 12, 10, 18)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "id": "709355c1",
    "metadata": {},
    "outputs": [
@@ -268,7 +274,7 @@
        " 18)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "id": "b9d5a546",
    "metadata": {},
    "outputs": [
@@ -305,7 +311,7 @@
        "[1, 'Fahad', 42, True]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "id": "02a21203",
    "metadata": {},
    "outputs": [
@@ -327,7 +333,7 @@
        "list"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "id": "251fea3d",
    "metadata": {},
    "outputs": [
@@ -348,7 +354,7 @@
        "['Fahad', 42]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "id": "60a12abf",
    "metadata": {},
    "outputs": [
@@ -369,7 +375,7 @@
        "[55, 42, 12, 18, 47, 48, 26, 31, 35, 42, 33]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "id": "c18316f9",
    "metadata": {},
    "outputs": [
@@ -391,7 +397,7 @@
        "[1, 'Fahad', 42, True, 55, 42, 12, 18, 47, 48, 26, 31, 35, 42, 33]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "id": "b79c5efd",
    "metadata": {},
    "outputs": [],
@@ -412,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "id": "a48ba0ff",
    "metadata": {},
    "outputs": [
@@ -422,7 +428,7 @@
        "[True, 42, 'Fahad', 1]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "id": "cb44f31b",
    "metadata": {},
    "outputs": [],
@@ -443,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 20,
    "id": "5bef0334",
    "metadata": {},
    "outputs": [
@@ -453,7 +459,7 @@
        "[12, 18, 26, 31, 33, 35, 42, 42, 47, 48, 55]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 21,
    "id": "19920701",
    "metadata": {},
    "outputs": [
@@ -474,7 +480,7 @@
        "2"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 22,
    "id": "2d8aa26e",
    "metadata": {},
    "outputs": [],
@@ -495,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 23,
    "id": "3be8bdf2",
    "metadata": {},
    "outputs": [
@@ -505,7 +511,7 @@
        "[True, 42, 'Fahad', 1, 'reg']"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 24,
    "id": "5947ec6c",
    "metadata": {},
    "outputs": [
@@ -526,7 +532,7 @@
        "11"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "id": "d802ea4a",
    "metadata": {},
    "outputs": [],
@@ -556,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "id": "1bd8c629",
    "metadata": {},
    "outputs": [
@@ -576,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "id": "3264dd49",
    "metadata": {},
    "outputs": [
@@ -586,7 +592,7 @@
        "dict"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "id": "90917f8f",
    "metadata": {},
    "outputs": [
@@ -621,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "id": "07a345bf",
    "metadata": {},
    "outputs": [
@@ -631,7 +637,7 @@
        "{'eng': 100, 'urdu': 70, 'chem': 150, 'phy': 170, 'mth': 200, 'bio': 250}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "id": "543ef64c",
    "metadata": {},
    "outputs": [
@@ -653,7 +659,7 @@
        "{'eng': 100, 'urdu': 70, 'chem': 150, 'phy': 170, 'mth': 200, 'bio': 300}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "id": "482954bc",
    "metadata": {},
    "outputs": [
@@ -685,7 +691,7 @@
        " 'bio': 300}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 32,
    "id": "3d3c5fa7",
    "metadata": {},
    "outputs": [
@@ -719,7 +725,7 @@
        "{1, 1419, 'CCW', 'COMSATS', 'Fahad'}"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 33,
    "id": "4c72e8e2",
    "metadata": {},
    "outputs": [
@@ -741,7 +747,7 @@
        "{1, 1419, 55, 'CCW', 'COMSATS', 'Fahad'}"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -753,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 34,
    "id": "1a429d5f",
    "metadata": {},
    "outputs": [
@@ -763,7 +769,7 @@
        "{1, 55, 'CCW', 'COMSATS', 'Fahad'}"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 35,
    "id": "569857f1",
    "metadata": {},
    "outputs": [
@@ -785,7 +791,7 @@
        "{1, 55, 'CCW', 'COMSATS', 'Fahad'}"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
