--- a/Machine Learning/models/Linear_Regression/simple_linear_regression.ipynb
+++ b/Machine Learning/models/Linear_Regression/simple_linear_regression.ipynb
@@ -573,7 +573,7 @@
    "hash": "493df3c9cb0b6039bdd55a65bbe4e72f5455454af67b96ceaa441cb0a32c7b2a"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.10 64-bit (windows store)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -587,9 +587,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
-  },
-  "orig_nbformat": 4
+   "version": "3.9.7"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
