--- a/Machine Learning/My Projects/Fahad/1/cancer_prediction.ipynb
+++ b/Machine Learning/My Projects/Fahad/1/cancer_prediction.ipynb
@@ -22,6 +22,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### <span style=\"color:red\">Problem: **Classification**</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### <span style=\"color:cyan\">Step: 01</span>: (Import Dataset)"
    ]
   },
@@ -1373,7 +1380,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
