--- a/Python/Basic/python_Classes.ipynb
+++ b/Python/Basic/python_Classes.ipynb
@@ -23,12 +23,11 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fahad\n",
-      "COMSATS University Islamabad (Sahiwal Campus)\n",
-      "5\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (Temp/ipykernel_3024/583294333.py, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\fahad\\AppData\\Local\\Temp/ipykernel_3024/583294333.py\"\u001b[1;36m, line \u001b[1;32m4\u001b[0m\n\u001b[1;33m    `\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -49,25 +48,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "c834cb33",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Add: 97\n",
-      "Mul: 4\n",
-      "Mod: 1\n",
-      "Div with Float: 2.0\n",
-      "Div without Float: 2\n",
-      "Sub: 2\n",
-      "Power: 8\n",
-      "PEMDAS Rule:  12.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Add:\", 42+55)\n",
     "print(\"Mul:\", 2*2)\n",
@@ -90,20 +74,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d133ca79",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Muhammad Fahad\n",
-      "PAKISTAN !\n",
-      "SP19-BCS-042\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Muhammad Fahad\")\n",
     "\n",
@@ -122,24 +96,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "0a3cf1a4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "42\n",
-      "<class 'int'>\n",
-      "Myself Fahad\n",
-      "<class 'str'>\n",
-      "5.5\n",
-      "<class 'float'>\n",
-      "Apples, Bananas\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# (1)\n",
     "f=42\n",
@@ -176,19 +136,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "9d007a09",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hy Faadie!\n",
-      "ALi\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# (1)\n",
     "# age=input(\"What's your Age: \")\n",
@@ -225,21 +176,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "0818df92",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "What's your Child Age:22\n",
-      "<class 'str'>\n",
-      "<class 'int'>\n",
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "school_age=5\n",
     "\n",
@@ -265,20 +205,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "7672e70e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Age:  22 <class 'str'>\n",
-      "42 <class 'str'>\n",
-      "reg 42.0 <class 'float'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# (1)\n",
     "age=22\n",
@@ -303,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "0eef0e79",
    "metadata": {},
    "outputs": [
@@ -348,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "b7a60aed",
    "metadata": {},
    "outputs": [
@@ -365,7 +295,7 @@
        "25"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "68d8bde4",
    "metadata": {},
    "outputs": [
@@ -514,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "9427d568",
    "metadata": {},
    "outputs": [
@@ -551,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "c0e274e5",
    "metadata": {},
    "outputs": [
@@ -603,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "233f283e",
    "metadata": {},
    "outputs": [
@@ -643,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "5420e315",
    "metadata": {},
    "outputs": [],
@@ -670,7 +600,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
