--- a/Python/Pandas/task_with_pandas.ipynb
+++ b/Python/Pandas/task_with_pandas.ipynb
@@ -578,7 +578,7 @@
    "hash": "493df3c9cb0b6039bdd55a65bbe4e72f5455454af67b96ceaa441cb0a32c7b2a"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.10 64-bit (windows store)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -592,9 +592,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
-  },
-  "orig_nbformat": 4
+   "version": "3.8.2"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
